# searchmonkey

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
pixmaps/: Makefile  Makefile.in
po/: LINGUAS  en_UK.po  en_US.po  fr.po  fr_FR.po  pt_PT.po  ru_RU.po
src/: Makefile.in  callbacks.c  interface.c  interface.h  misc.c  misc.h  savestate.c  search.c
